---
source: tests/lexer.rs
description: "\n        post /api {\n            body `{\"neet\": ${env(\"love\")}, 2: ${\"two\"}}`\n        }\n\n        post http://localhost {\n          header \"Authorization\" \"Bearer token\"\n          body `{\"neet\": 1337}`\n        }\n\n        "
expression: "lexer.into_iter().collect::<Vec<rested::lexer::Token>>()"
---
[
    Post("post") at Position { value: 9, line: 1, col: 8 },
    Pathname("/api") at Position { value: 14, line: 1, col: 13 },
    LBracket("{") at Position { value: 19, line: 1, col: 18 },
    Body("body") at Position { value: 33, line: 2, col: 12 },
    OpeningBackTick("`") at Position { value: 38, line: 2, col: 17 },
    StringLiteral("{\"neet\": ") at Position { value: 39, line: 2, col: 18 },
    DollarSignLBracket("${") at Position { value: 48, line: 2, col: 27 },
    Ident("env") at Position { value: 50, line: 2, col: 29 },
    LParen("(") at Position { value: 53, line: 2, col: 32 },
    StringLiteral("\"love\"") at Position { value: 54, line: 2, col: 33 },
    RParen(")") at Position { value: 60, line: 2, col: 39 },
    RBracket("}") at Position { value: 61, line: 2, col: 40 },
    StringLiteral(", 2: ") at Position { value: 62, line: 2, col: 41 },
    DollarSignLBracket("${") at Position { value: 67, line: 2, col: 46 },
    StringLiteral("\"two\"") at Position { value: 69, line: 2, col: 48 },
    RBracket("}") at Position { value: 74, line: 2, col: 53 },
    StringLiteral("}") at Position { value: 75, line: 2, col: 54 },
    ClosingBackTick("`") at Position { value: 76, line: 2, col: 55 },
    RBracket("}") at Position { value: 86, line: 3, col: 8 },
    Post("post") at Position { value: 97, line: 5, col: 8 },
    Url("http://localhost") at Position { value: 102, line: 5, col: 13 },
    LBracket("{") at Position { value: 119, line: 5, col: 30 },
    Header("header") at Position { value: 131, line: 6, col: 10 },
    StringLiteral("\"Authorization\"") at Position { value: 138, line: 6, col: 17 },
    StringLiteral("\"Bearer token\"") at Position { value: 154, line: 6, col: 33 },
    Body("body") at Position { value: 179, line: 7, col: 10 },
    OpeningBackTick("`") at Position { value: 184, line: 7, col: 15 },
    StringLiteral("{\"neet\": 1337}") at Position { value: 185, line: 7, col: 16 },
    ClosingBackTick("`") at Position { value: 199, line: 7, col: 30 },
    RBracket("}") at Position { value: 209, line: 8, col: 8 },
]
